# Qourum-By-Enma-Labs

./: .gitignore  README.md  pyproject.toml
extension/: README.md  manifest.json
extension/src/: background.js  content.js  intent.js  panel.js  portfolio.js  tickers.js
extension/test/: portfolio.test.js  tickers.test.js
quorum/: __init__.py  cli.py  config.py  errors.py  leaderboard.py  models.py  orchestrator.py  outcomes.py  roast.py  serve.py  storage.py
quorum/agents/: __init__.py  narration.py  prompts.py
quorum/data/: __init__.py  adapters.py
quorum/providers/: __init__.py  base.py  breaker.py  openai_compat.py  registry.py
quorum/quant/: __init__.py  calibration.py  chairman.py  devils_advocate.py  fundamentalist.py  macro.py  risk.py  technician.py  weights.py
scripts/: daily_batch.ps1  register_daily_batch.ps1
supabase/migrations/: 0001_leaderboard_schema.sql  0002_leaderboard_us_exchanges.sql
tests/: conftest.py  test_adapters.py  test_calibration_weights.py  test_chairman.py  test_cli_batch.py  test_leaderboard.py  test_narration.py  test_orchestrator.py  test_providers.py  test_quant_models.py  test_roast.py  test_serve.py
