[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quorum-council"
version = "0.1.0"
description = "Quorum — an open-source, auditable, provider-agnostic AI debate engine for stock analysis. Math decides, LLMs narrate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Enma Labs" }]
keywords = ["quant", "llm", "trading", "ensemble", "nse"]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "PyYAML>=6.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
hmm = ["hmmlearn>=0.3"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
quorum = "quorum.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["quorum"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
